Add droppable component & responsive spacing sections (#82)
* Add new responsive section spacing helper classes
* Add new droppable component, and docs.

--- a/docs/_includes/css/helpers.html
+++ b/docs/_includes/css/helpers.html
@@ -29,18 +29,42 @@
 <button class="btn p-a-3">.p-a-3</button>
 {% endhighlight %}
 
-<h3 id="helper-classes-xl-spacing">m-b-4 and m-b-5</h3>
-<p>There are two additional sizes, m-b-4 and m-b-5, that are only available for margin
-    bottom, use <code>.m-b-4</code> or <code>.m-b-5</code> to provide 32px
-    or 40px of spacing.</p>
-<div class="bs-example" data-example-id="helper-classes-xl-spacing">
-    <div class="m-a-1"><span style="display: inline-block;" class="bg-default"><button class="btn btn-primary m-b-4">.m-b-4</button></span></div>
-    <div class="m-a-1"><span style="display: inline-block;"  class="bg-default"><button class="btn btn-primary m-b-5">.m-b-5</button></span></div>
-</div>
-{% highlight html %}
-<button class="btn m-b-4">.m-b-4</button>
-<button class="btn m-b-5">.m-b-5</button>
-{% endhighlight %}
+  <h3 id="helper-classes-xl-spacing">m-b-4 and m-b-5</h3>
+  <p>There are two additional sizes, m-b-4 and m-b-5, that are only available for margin
+      bottom, use <code>.m-b-4</code> or <code>.m-b-5</code> to provide 32px
+      or 40px of spacing.</p>
+  <div class="bs-example" data-example-id="helper-classes-xl-spacing">
+      <div class="m-a-1"><span style="display: inline-block;" class="bg-default"><button class="btn btn-primary m-b-4">.m-b-4</button></span></div>
+      <div class="m-a-1"><span style="display: inline-block;"  class="bg-default"><button class="btn btn-primary m-b-5">.m-b-5</button></span></div>
+  </div>
+  {% highlight html %}
+  <button class="btn m-b-4">.m-b-4</button>
+  <button class="btn m-b-5">.m-b-5</button>
+  {% endhighlight %}
+
+
+  <h3 id="helper-classes-responsive-sections">Responsive sections</h3>
+  <p>We have three sizes of larger, responsive spacing used for separating sections of a page:</p>
+  <ul>
+    <li><code>section-1</code> classes provide <strong>16px, 24px or 32px</strong>
+      of spacing depending on screen width.</li>
+    <li><code>section-2</code> classes provide <strong>24px, 48px or 64px</strong>
+      of spacing depending on screen width.</li>
+    <li><code>section-3</code> classes provide <strong>48px, 64px or 96px</strong>
+      of spacing depending on screen width.</li>
+  </ul>
+  <p>Spacing classes are available for each of the <strong>vertical</strong>
+    utility classes at each section size e.g.<p>
+  <ul>
+    <li><code>.m-t-section-1</code></li>
+    <li><code>.m-b-section-2</code></li>
+    <li><code>.m-y-section-3</code></li>
+
+    <li><code>.p-t-section-1</code></li>
+    <li><code>.p-b-section-2</code></li>
+    <li><code>.p-y-section-3</code></li>
+  </ul>
+
 
   <h3 id="helper-classes-colors">Contextual colors</h3>
   <p>Convey meaning through color with a handful of emphasis utility classes. These may also be applied to links and will darken on hover just like our default link styles.</p>
