--- a/docs/_includes/nav/components.html
+++ b/docs/_includes/nav/components.html
@@ -41,6 +41,15 @@
   </ul>
 </li>
 <li>
+  <a href="#droppable">Droppable</a>
+  <ul class="nav">
+    <li><a href="#droppable">Basic example</a></li>
+    <li><a href="#droppable-active">Active state</a></li>
+    <li><a href="#droppable-mobile">Mobile behaviour</a></li>
+    <li><a href="#droppable-sizes">Sizing</a></li>
+  </ul>
+</li>
+<li>
   <a href="#glyphicons">Glyphicons</a>
   <ul class="nav">
     <li><a href="#glyphicons-glyphs">Available glyphs</a></li>
