--- a/less/alerts.less
+++ b/less/alerts.less
@@ -7,8 +7,8 @@
 // -------------------------
 
 .alert {
-  padding: @padding-container-collapse-xs;
-  margin-bottom: @padding-container-collapse-xs;
+  padding: @spacing-1-mobile;
+  margin-bottom: @spacing-1-mobile;
   border-radius: @alert-border-radius;
 
   // Headings for larger alerts
@@ -32,14 +32,14 @@
 
 @media (min-width: @screen-sm-min) {
   .alert {
-    padding: @padding-container-collapse;
-    margin-bottom: @padding-container-collapse;
+    padding: @spacing-1-tablet;
+    margin-bottom: @spacing-1-tablet;
   }
 }
 @media (min-width: @screen-lg-min) {
   .alert {
-    padding: @padding-container;
-    margin-bottom: @padding-container;
+    padding: @spacing-1-desktop;
+    margin-bottom: @spacing-1-desktop;
   }
 }
 
