--- a/less/grid.less
+++ b/less/grid.less
@@ -93,14 +93,14 @@
 
 @media (max-width: @screen-xs-max) {
   .container {
-    padding-right: @padding-container-collapse-xs;
-    padding-left: @padding-container-collapse-xs;
+    padding-right: @spacing-1-mobile;
+    padding-left: @spacing-1-mobile;
   }
 }
 @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
   .container {
-    padding-right: @padding-container-collapse;
-    padding-left: @padding-container-collapse;
+    padding-right: @spacing-1-tablet;
+    padding-left: @spacing-1-tablet;
   }
 }
 
