--- a/less/list-group.less
+++ b/less/list-group.less
@@ -23,7 +23,7 @@
 .list-group-item {
   position: relative;
   display: block;
-  padding: @padding-container-collapse-xs @padding-container-collapse-xs @padding-container-collapse-xs (@padding-container-collapse-xs - 2px);
+  padding: @spacing-1-mobile @spacing-1-mobile @spacing-1-mobile (@spacing-1-mobile - 2px);
   // Place the border on the list items and negative margin up for better styling
   background-color: @list-group-bg;
   border-left: 2px solid transparent;
@@ -40,12 +40,12 @@
 
 @media (min-width: @screen-sm-min) {
   .list-group-item {
-    padding: @padding-container-collapse @padding-container-collapse @padding-container-collapse (@padding-container-collapse - 2px);
+    padding: @spacing-1-tablet @spacing-1-tablet @spacing-1-tablet (@spacing-1-tablet - 2px);
   }
 }
 @media (min-width: @screen-lg-min) {
   .list-group-item {
-    padding: @padding-container @padding-container @padding-container (@padding-container - 2px);
+    padding: @spacing-1-desktop @spacing-1-desktop @spacing-1-desktop (@spacing-1-desktop - 2px);
   }
 }
 
