--- a/less/media.less
+++ b/less/media.less
@@ -33,21 +33,21 @@
 //
 
 .media-right {
-  padding-left: @padding-container-collapse-xs;
+  padding-left: @spacing-1-mobile;
 }
 
 .media-left {
-  padding-right: @padding-container-collapse-xs;
+  padding-right: @spacing-1-mobile;
 }
 
 
 @media (min-width: @screen-sm-min) {
   .media-right {
-    padding-left: @padding-container-collapse;
+    padding-left: @spacing-1-tablet;
   }
 
   .media-left {
-    padding-right: @padding-container-collapse;
+    padding-right: @spacing-1-tablet;
   }
 }
 
