--- a/less/scaffolding.less
+++ b/less/scaffolding.less
@@ -141,18 +141,18 @@ img {
 // Horizontal rules
 
 hr {
-  margin-top:    @padding-container-collapse-xs;
-  margin-bottom: @padding-container-collapse-xs;
+  margin-top:    @spacing-1-mobile;
+  margin-bottom: @spacing-1-mobile;
   border: 0;
   border-top: 1px solid @hr-border;
 
   @media (min-width: @screen-sm-min) {
-    margin-top:    @padding-container-collapse;
-    margin-bottom: @padding-container-collapse;
+    margin-top:    @spacing-1-tablet;
+    margin-bottom: @spacing-1-tablet;
   }
   @media (min-width: @screen-lg-min) {
-    margin-top:    @padding-container;
-    margin-bottom: @padding-container;
+    margin-top:    @spacing-1-desktop;
+    margin-bottom: @spacing-1-desktop;
   }
 }
 
