--- a/less/tiles.less
+++ b/less/tiles.less
@@ -7,7 +7,7 @@
   outline: none;
   transition: all 0.1s ease-in-out;
 
-  padding: @padding-container-collapse-xs;
+  padding: @spacing-1-mobile;
   background-color: @brand-smoke-plus-20;
   border: 1px solid @brand-smoke-plus-10;
   border-radius: @border-radius-base;
@@ -48,7 +48,7 @@
 
   .tile-icon {
     float: left;
-    margin-right: @padding-container-collapse-xs;
+    margin-right: @spacing-1-mobile;
   }
   .tile-text {
     overflow-y: hidden;
@@ -90,7 +90,7 @@
 
 @media (min-width: @screen-sm-min) {
   .tile {
-    padding: @padding-container-collapse;
+    padding: @spacing-1-tablet;
 
     .tile-icon {
       float: none;
@@ -108,7 +108,7 @@
 
 @media (min-width: @screen-lg-min) {
   .tile {
-    padding: @padding-container;
+    padding: @spacing-1-desktop;
   }
 }
 
