--- a/docs/_includes/nav/css.html
+++ b/docs/_includes/nav/css.html
@@ -98,6 +98,8 @@
 <li>
   <a href="#helper-classes">Helper classes</a>
   <ul class="nav">
+    <li><a href="#helper-classes-spacing">Spacing</a></li>
+    <li><a href="#helper-classes-responsive-sections">Responsive sections</a></li>
     <li><a href="#helper-classes-colors">Contextual colors</a></li>
     <li><a href="#helper-classes-backgrounds">Contextual backgrounds</a></li>
     <li><a href="#helper-classes-close">Close icon</a></li>
