--- a/scss/_animation.scss
+++ b/scss/_animation.scss
@@ -1,7 +1,7 @@
 .fade {
   opacity: 0;
 
-  @include transition(opacity .15s linear);
+  @include transition(opacity $transition-duration-short $transition-timing-secondary);
 
   &.active {
     opacity: 1;
@@ -32,5 +32,5 @@ tbody {
   height: 0;
   overflow: hidden;
 
-  @include transition(height .35s ease);
+  @include transition(height $transition-duration-base ease);
 }
