--- a/scss/_carousel.scss
+++ b/scss/_carousel.scss
@@ -15,7 +15,7 @@
   width: 100%;
 
   @include if-supports-3d-transforms() {
-    @include transition(transform .6s ease-in-out);
+    @include transition($transition-property-secondary $transition-duration-long $transition-timing-primary);
     backface-visibility: hidden;
     perspective: 1000px;
   }
