--- a/scss/_modal.scss
+++ b/scss/_modal.scss
@@ -28,7 +28,7 @@
 
   // When fading in the modal, animate it to slide down
   &.fade .modal-dialog {
-    @include transition(transform .3s ease-out);
+    @include transition($transition-property-secondary $transition-duration-base $transition-timing-primary);
     transform: translate(0, -25%);
   }
   &.active .modal-dialog { transform: translate(0, 0); }
