Allow flex on per-mixin-use basis

--- a/scss/mixins/_grid.scss
+++ b/scss/mixins/_grid.scss
@@ -39,8 +39,8 @@
   }
 }
 
-@mixin make-row($gutters: $grid-gutter-widths) {
-  @if $enable-flex {
+@mixin make-row($gutters: $grid-gutter-widths, $flex: $enable-flex) {
+  @if $flex {
     display: flex;
     flex-wrap: wrap;
   } @else {
